--- a/dash-2.20.0/.github/workflows/test.yml
+++ b/dash-2.20.0/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: CI
 on: [push, pull_request]
-
+permissions: {}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,12 +19,23 @@ jobs:
           - '26.2'
           - '26.3'
           - '27.1'
+          - '27.2'
+          - '28.1'
+          - '28.2'
+          - '29.1'
+          - '29.2'
+          - '29.3'
+          - '29.4'
+          - '30.1'
+          - 'release-snapshot'
           - 'snapshot'
         include:
           - emacs_version: 'snapshot'
             allow_failure: true
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
     - uses: purcell/setup-emacs@master
       with:
         version: ${{ matrix.emacs_version }}
